--- a/index.html
+++ b/index.html
@@ -50,10 +50,20 @@
         </p>
 
         <ul>
-            
+            <li>
+                <a href="mailto:matheus.soares@dcx.ufpb.br">Email</a>
+            </li>
+
+            <li>
+                <a href="#">Telefone</a>
+            </li>
         </ul>
 
-    </main>
+        <address>
+            Written by Lobisomem pidão.<br>
+            lobisomempidao.com<br>
+            Transylvania<br>
+        </address>
     </main>
 </body>
 
